# DRG-MVP

./: .editorconfig  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  READINESS.md  README.md  SECURITY.md  SETUP_AND_DOWNLOAD.md  pyproject.toml
.github/: dependabot.yml
agent/: .env.example  package-lock.json  package.json  tsconfig.json
demo/: README.md  index.html  package-lock.json  package.json
docs/: ADAPTER_FACTORY.md  AGENTIC_RUNTIME.md  ARCHITECTURE.md  AUTOMATION.md  EVALUATION.md  ITERATIVE_REVIEW.md  NOTIONAL_DATA.md  ONTOLOGY.md  PRODUCTION_INTEGRATIONS.md  REVIEW_PACKET.md  REVIEW_WORKFLOW.md  how-it-works.html  platform-report.html
examples/: case_diabetic_foot_ulcer_episode.json  case_pressure_injury.json  case_pressure_injury_hac_sequencing.json  case_pressure_injury_v2.json  case_sepsis.json  source_bundle_pressure_injury.json
knowledge/: README.md  disease_treatment_ontology_source.json  wound_care_source_manifest.json
rules/: sepsis_v1.json  wound_care_gaps_v1.json  wound_care_v1.json  wound_care_v2.json
schemas/: adapter_definition.schema.json  automation_plan.schema.json  bulk_profile.schema.json  claim.schema.json  encounter_case.schema.json  extraction_fragment.schema.json  ontology_definition.schema.json  review_decision.schema.json  review_packet.schema.json  rule_package.schema.json  source_bundle.schema.json
scripts/: generate_demo_packet.py
tests/: test_audit.py  test_authored_reader.py  test_authored_transform.py  test_automation.py  test_cli.py  test_clinical_care_gap.py  test_denial_root_cause.py  test_engine.py  test_episode.py  test_evaluation.py  test_financial.py  test_financial_reconciliation.py  test_grouper.py  test_ingestion.py  test_integrations.py  test_invariants.py  test_investigation.py  test_knowledge_sources.py  test_models.py  test_narrative.py  (+18 more)
(+136 files in other folders)
