[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "encounter-revenue-integrity"
version = "0.7.0"
description = "Evidence-grounded, deterministic encounter reconciliation for clinical coding and billing"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [{name = "KUNAL"}]
dependencies = []

[project.scripts]
revenue-integrity = "revenue_integrity.cli:main"
revenue-integrity-ingest = "revenue_integrity.ingestion.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
revenue_integrity = ["data/*.json"]
